--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest examples"
+    "test": "jest examples",
+    "prepublishOnly": "npm run test"
   },
   "author": "",
   "license": "ISC",
